Ingresses/hello_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-demo
  labels:
    name: hello-world-ingress
spec:
  rules:
  - host: hello.myminikube.demo
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port:
              number: 8080
