Ingresses/logs_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs-ingress
  namespace: kube-system
  labels:
    name: logs-ingress
spec:
  rules:
  - host: logs.myminikube.demo
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: logviewer
            port:
              number: 3000
